Fix neeto-icons visibility issues in NeetoUI dark mode (#2715)
* Fix neeto-icons visibility issue in dark theme by adding specific styles for fill and stroke attributes

* Bugwatch suggestion

* Minor fix

--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -7,3 +7,31 @@
     color: inherit;
   }
 }
+
+.neeto-ui-theme--dark{
+  [data-dark-fill="white"] {
+    fill: white;
+  }
+
+  [data-dark-stroke="white"] {
+    stroke: white;
+  }
+
+  [data-dark-fill-stroke="white"] {
+    fill: white;
+    stroke: white;
+  }
+
+  [data-dark-fill="current"] {
+    fill: currentColor;
+  }
+
+  [data-dark-stroke="current"] {
+    stroke: currentColor;
+  }
+
+  [data-dark-fill-stroke="current"] {
+    fill: currentColor;
+    stroke: currentColor;
+  }
+}
